--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-APP_NAME=Laravel
+APP_NAME="Chargeback Report"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:SlBLOjrsN0/6GRZY1tvpPXRanLuYy1sDjLN64JNRyMk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://10.233.7.238/mms-clone/public
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=chargeback_report
 DB_USERNAME=root
 DB_PASSWORD=
 
